<resources>
    <string name="app_name">The Closing Speaker</string>

    <string name="action_about">About</string>

    <string name="favorite_title">Favorites</string>

    <string name="format_text_bold">###</string>
    <string name="format_text_italics">***</string>
    <string name="format_text_underline">___</string>

    <string name="format_text_quotation_mark">^^^</string>

    <string name="author_bar_title">Authors</string>
    <string name="topic_bar_title">Topics</string>
    <string name="favorite_bar_title">Favorites</string>
    <string name="favorite_icon">Favorite</string>
    <string name="copy_icon">Copy</string>
    <string name="share_icon">Share</string>
    <string name="search_hint">Search topics and authors</string>
    <string name="search_title">Search</string>
    <string name="share_title">Invite</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="appwidget_title">Quote of the Day</string>
    <string name="add_widget">Add widget</string>
    <string name="refresh_button_description">Refresh</string>

    <string name="invitation_title">Share The Closing Speaker</string>
    <string name="invitation_email_subject">Working on a lesson or talk?</string>
    <string name="invitation_message">I thought you might like to try The Closing Speaker</string>
    <string name="invitation_cta">Download now</string>
    <string name="title_activity_quote_detail">QuoteDetailActivity</string>

    <string name="empty_favorites_list">Oops, you don\'t have any favorite quotes.</string>
    <string name="empty_favorites_list_try_random">Take me to a random topic</string>
    <string name="removed_from_favorites_snackbar">Removed from favorites</string>
    <string name="added_to_favorites_snackbar">Added to favorites</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_about">About</string>
    <string name="about_text">I\'ve been working on this project with my dad, Dennis Barlow, for over two years. He\'s been working on it for decades. There\'s a gap in trying to research religious topics. While it\'s easy to look in the topical guide for scriptures, even when that topic isn\'t directly mentioned, the same could not be said for leaders of the Church. I built this app as a quick reference during study or for preparation, but that can be continually added upon as our leaders speak to us. \n\nIf you have found it useful, please consider sharing it.</string>
    <string name="stats_for_nerds_title">Stats for Nerds:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sign_in_alternate">"OR"</string>
    <string name="sign_in_with_google">"Sign in with Google"</string>



    <string name="sign_in_cancelled">Sign in cancelled - please try again.</string>
    <string name="no_internet_connection">Unable to connect to the interwebs</string>
    <string name="unknown_error">Here\'s an error - check Google Play Services?</string>
    <string name="unknown_sign_in_response">I can neither confirm nor deny your signed in status</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="total_number_of_topics">Total number of topics:</string>
    <string name="total_number_of_authors">Total number of authors:</string>
    <string name="total_number_of_quotes">Total number of quotes:</string>


</resources>
