<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.the_closing_speaker.AboutActivity"
    tools:showIn="@layout/activity_about">

    <TextView
        android:id="@+id/about_text_view"
        android:layout_gravity="center_horizontal|center"
        android:gravity="start"
        android:text="@string/about_text"
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/stats_for_nerds_text_view"
        android:layout_below="@id/about_text_view"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/stats_for_nerds_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/total_quotes_text_view"
        android:layout_below="@id/stats_for_nerds_text_view"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/textColor"
        android:text="@string/total_number_of_quotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/total_authors_text_view"
        android:layout_below="@id/total_quotes_text_view"
        android:textColor="@color/textColor"
        android:text="@string/total_number_of_authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/total_topics_text_view"
        android:layout_below="@id/total_authors_text_view"
        android:textColor="@color/textColor"
        android:text="@string/total_number_of_topics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/total_topics_text_view">

        <Button
            android:id="@+id/delete_account_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/deleteRed"
            android:contentDescription="@string/delete_your_account"
            android:elevation="2dp"
            android:text="@string/delete_account" />

    </RelativeLayout>




</RelativeLayout>
