<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_author_view"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:gravity="center_vertical|start"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_weight="7"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:contentDescription="@string/favorite_icon"
            android:id="@+id/detail_favorite_button"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:padding="12dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center_vertical|end"
            android:layout_gravity="center"
            android:src="@drawable/ic_favorite_border_black_24dp"/>

        <ImageButton
            android:contentDescription="@string/copy_icon"
            android:id="@+id/detail_copy_button"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:padding="12dp"
            android:background="@color/transparent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:layout_gravity="center"
            android:src="@drawable/ic_content_copy_black_24dp"/>

        <ImageButton
            android:contentDescription="@string/share_icon"
            android:id="@+id/detail_share_button"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:padding="12dp"
            android:background="@color/transparent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:layout_gravity="center"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:src="@drawable/ic_menu_share"/>

    </LinearLayout>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@android:drawable/divider_horizontal_bright"/>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        android:layout_weight="1">

        <TextView
            android:id="@+id/detail_quote_view"
            android:padding="12dp"
            android:textColor="@color/textColor"
            android:textIsSelectable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_bright"/>

    <TextView
        android:id="@+id/detail_reference_view"
        android:padding="12dp"
        android:textColor="@color/textColor"
        android:textStyle="italic"
        android:background="@android:color/white"
        android:gravity="end|center_vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:minHeight="@dimen/toolbar_height"
        android:layout_height="wrap_content" />

</LinearLayout>